added: nested forms with formbuilder

--- a/src/app/areas/area/rectangle/rectangle.component.html
+++ b/src/app/areas/area/rectangle/rectangle.component.html
@@ -1,7 +1,8 @@
-<div class="container" [formGroup]="valuesForm">
+<div class="container" [formGroup]="values">
   <h5>Rectangle</h5>
   <input type="number" class="form-control" placeholder="a" formControlName="a">
   <input type="number" class="form-control" placeholder="b" formControlName="b">
-  <h5 class="result">Calculated Area: {{valuesForm.value.result}} m2</h5>
+  <h5 class="result">Calculated Area: {{ result }} m2</h5>
+  <button class="btn btn-default" type="button" (click)="addToTotal()">Save</button>
 </div>
 
