--- a/src/app/areas/areas.component.html
+++ b/src/app/areas/areas.component.html
@@ -1,4 +1,6 @@
 <div class="container">
   <h4>Areas</h4>
-  <app-area *ngFor="let area of areas; let i=index" [area]="area" [index]="i"></app-area>
+  <p>{{ total }}</p>
+  <app-area *ngFor="let area of areasForm.value.areas; let i=index" [area]="area" [index]="i"></app-area>
 </div>
+<div> {{areasForm.value | json}} </div>
